2015-06-11  Per Bothner  <per@bothner.com>

	* CompilationHelpers.java (validateApplyToArgs): Simplify optimization
	of indexing of uniform vector.
	(validateSetter): Check implementation type for List.
	(class SetListExp): Optimize setting of indexing of uniform vector.

	* MakeSplice.java (count): Simplify by using Sequences.getSize.

2015-06-10  Per Bothner  <per@bothner.com>

	* ApplyToArgs.java (applyN): Handle indexing CharSequence.
	* CompilationHelpers.java (validateApplyToArgs): Likewise.

2015-06-08  Per Bothner  <per@bothner.com>

	* CompilationHelpers.java (validateApplyToArgs): Optimize when
	"procedure" is a uniform vector, like U16Vector.

	* AppendValues.java (compile): Do the all-but-one-void-expression
	optimization even for ConsumerTarget, because it might be non-simple.
	That is the appended type may differ from the type of the parts.
	If so, and it's a ConsumerTarget, we otherwise compileUsingValues.

2015-06-07  Per Bothner  <per@bothner.com>

	* Setter.java (SetArray.apply2): Coerce elements.
	(SetList.<init>): Set elementType.
	(SetList.apply2): Coerce elements.

2015-06-04  Per Bothner  <per@bothner.com>

	* CompileArith.java (compile): Better job with shift.

	* DivideOp.java (applyN): Handle unsigned integer types.

2015-06-03  Per Bothner  <per@bothner.com>

	More support for unsigned arithmetic.
	* Arithmetic.java (classifyValue): Removed unused code,
	since UnsignedPrim does not extend Numeric.
	(asRatNum): Handle unsigned types more efficiently.
	(toString, convert): Handle unsigned types.
	* BitwiseOp.java (adjustResult): Handle unsigned types.
	* MultiplyOp.java (combine): Likewise.
	* CompileArith.java (compile): Fixes for unsigned primitive types.
	(compileIntNum): Tweak subtraction optimization for ulong.

2015-06-02  Per Bothner  <per@bothner.com>

	* NumberCompare.java (compare): Handle uint and ulong.
	* CompileMisc.java (compileNumberCompare): Likewise.

2015-05-20  Per Bothner  <per@bothner.com>
