@@ -1,3 +1,9 @@
+2015-06-12  Per Bothner  <per@bothner.com>
+
+	* ApplyToArgs.java (applyN): Allowing indexing of a sequence
+	using a sequence of integers.
+	* CompilationHelpers.java (validateApplyToArgs): Likewise.
+
 2015-06-11  Per Bothner  <per@bothner.com>
 
 	* CompilationHelpers.java (validateApplyToArgs): Simplify optimization
